modified method run in TUI